# LineBot

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
linebot/: linebot_app.py  linebot_app_gcp.py
linebot_app/: config.py  linebot_app_gcp.py
tests/: conftest.py  test_bot_operation.py
