[project]
name = "linebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-api-python-client>=2.185.0",
    "google-auth-oauthlib>=1.2.2",
    "line-bot-sdk>=3.20.0",
    "pygsheets>=2.0.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mock>=5.0.0",
]
